--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "3.7.15"
 torch = "^1.13.0"
 numpy = "1.21.6"
+notebook = "6.5.2"
+pandas = "1.3.5"
+tqdm = "4.64.1"
+music21 = "7.3.3"
 
 
 [build-system]
